05-KubernetesObjekte2/05-g-Ingress/helloweb-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloweb
spec:
  tls:
    - hosts:
      - hello-world.info
      secretName: helloworld-tls
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helloweb
                port:
                  number: 80
